# parallel

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  a.out
docs/perlmutter/: hpcAI_pytorch.md  mvapich-plus.md
env_scripts/perlmutter/: mvapichPlus_installation.sh
examples/perlmutter/: hpc_ai.slurm  hpc_ai_simple_distributed.py
functions/: reduction.cpp
include/: logger.h  reduction.h
scripts/: clean  defaults.txt  defaults.txt.example  job.slurm  job.titan  submit  submit_titan
src/: logger.cpp  mpi_blocking.cpp  mpi_broadcast.cpp  mpi_reductions.cpp
torchtitan_model_configs/debug/: debug.toml
torchtitan_model_configs/llama3/: llama3_8b.toml
